# GitPulse

./: .gitignore  .oxlintrc.json  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.graphql.json  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.config.ts
.cursor/rules/: composables-tauri-standards.mdc  i18n-loading-standards.mdc  tauri-rust-standards.mdc  ui-kit-standards.mdc
.github/DISCUSSION_TEMPLATE/: feedback.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml
docs/: RELEASING.md
docs/promotion/: README.md  devto-article.md  discord-tauri.md  product-hunt.md  reddit-macapps.md  reddit-opensource.md  reddit-tauri.md  reddit-vuejs.md  show-hn.md
gitbar-main/: .gitignore  Package.swift  README.md  flo.yml  install
gitbar-main/Casks/: gitbar.rb
gitbar-main/Formula/: gitbar.rb
gitbar-main/docs/: RELEASING.md
gitbar-main/scripts/: release.sh
gitbar-main/site/: index.html  package.json  pnpm-lock.yaml
public/: splashscreen.html
scripts/: generate-tray-icons.mjs
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  splashscreen.json
src-tauri/config/: README.md  oauth.example.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  gh_cli.rs  github_auth.rs  lib.rs  main.rs
src/api/: github.ts
src/composables/: useAppBootstrap.ts  useAppEventBus.ts  useAutostart.ts  useClipboard.ts  useDialog.ts  useDragDrop.ts  useFs.ts  useGitHubAuth.ts  useGitHubAuthFlow.ts  useHttpClient.ts  (+11 more)
(+209 files in other folders)
